kimai/deploy-kimai.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kimai
  namespace: kimai
  labels: { app: kimai }
spec:
  replicas: 1
  selector: { matchLabels: { app: kimai } }
  template:
    metadata:
      labels: { app: kimai }
    spec:
      containers:
        - name: web
          image: docker.io/kimai/kimai2:apache
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - name: http
              containerPort: 8001
          volumeMounts:
            - name: var
              mountPath: /opt/kimai/var
          readinessProbe:
            httpGet: { path: /, port: http }
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /, port: http }
            initialDelaySeconds: 60
            periodSeconds: 20
      volumes:
        - name: var
          persistentVolumeClaim:
            claimName: kimai-var
