kimai/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kimai-mariadb
  namespace: kimai
spec:
  selector: { app: mariadb }
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306

---
apiVersion: v1
kind: Service
metadata:
  name: kimai
  namespace: kimai
spec:
  selector: { app: kimai }
  ports:
    - name: http
      port: 8001
      targetPort: http
